# proofloop-evals

./: .gitignore  .proofloop.yaml.example  DESIGN.md  LICENSE  README.md  SECURITY.md  pyproject.toml  run_ollama_phi3.py
.github/workflows/: ci.yml
attacks/: README.md  context-smuggling.yaml  direct-override.yaml  encoding-tricks.yaml  multi-turn.yaml  payload-splitting.yaml  role-hijacking.yaml  system-extraction.yaml
examples/: agent-escalation.yaml  company-brain-workbench.yaml  prompt-injection.yaml  rag-grounding.yaml
proofloop/: cli.py  config.py  evaluator.py  history.py  loader.py  report.py
proofloop/checks/: behavioral.py  deterministic.py  llm_judge.py
proofloop/judges/: rubric.py  safety.py
proofloop/providers/: base.py  openai_compat.py
reports/: .gitkeep
results/: kimi-k2.6-analysis.md  kimi-k2.6-full-run.txt  ollama-phi3-analysis.md  ollama-phi3-full-run.txt  proofloop-demo.cast
targets/: code-reviewer.yaml  customer-service.yaml  medical-assistant.yaml
tests/: test_cli.py  test_content_filter.py  test_content_filter_judge.py  test_evaluator.py  test_history.py  test_judge.py  test_providers.py
